--- a/packages/vlossom/src/components/vs-layout/VsLayout.scss
+++ b/packages/vlossom/src/components/vs-layout/VsLayout.scss
@@ -2,7 +2,6 @@
     position: relative;
     width: 100%;
     height: 100%;
-    overflow: hidden;
     color: var(--vs-font-color);
     transition: padding 0.3s;
 }
